# cloacina

./: .cursorignore  .dockerignore  .gitignore  .pre-commit-config.yaml  .spelling_wordlist.txt  .yamllint-config.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-HEADER.txt  PYTHON_BINDINGS_CHECKLIST.md  README.md  analytics_example.cloacina  async-dal-migration.md  audit.toml  debug_db_test.py  debug_execution_test.py  debug_test.py  install.sh  minimal_debug.py  package-lock.json  plissken.toml  test_async_dal.py  test_complex_workflow.py  test_execution_minimal.py  test_final_context.rs  test_fresh_runner.py  test_function_based_dag.py  test_runner_only.py  test_wal_fix.py
bindings/cloaca-backend/: Cargo.toml  build.rs  pyproject.toml
bindings/cloaca-backend/src/: context.rs  lib.rs  runner.rs  task.rs
clients/python/: README.md  generator-config.yaml  pyproject.toml
clients/python/tests/: test_contract.py
cloacina/: Cargo.toml  debug_storage_test.rs
cloacina-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
cloacina-app/src-tauri/src/: lib.rs  main.rs
cloacina-ctl/: Cargo.toml
cloacina-ctl/examples/: config_example.rs  database_validation.rs
cloacina-ctl/src/: cli.rs  lib.rs  main.rs  main_original.rs
cloacina-ctl/src/archive/: create.rs  extract.rs  mod.rs
cloacina-ctl/src/commands/: debug.rs  inspect.rs  mod.rs
cloacina-ctl/src/config/: defaults.rs  error.rs  loader.rs  mod.rs  types.rs  validation.rs
cloacina-ctl/src/database/: backend_detection.rs  defaults.rs  mod.rs  validation.rs
cloacina-ctl/src/manifest/: generation.rs  mod.rs  types.rs
cloacina-ctl/src/server/: config.rs  daemon.rs  logs.rs  mod.rs  process.rs
cloacina-ctl/src/utils/: environment.rs  logging.rs  mod.rs
cloacina-ctl/src/validation/: cargo.rs  cloacina.rs  mod.rs  rust.rs
cloacina-ctl/src/visualization/: ascii.rs  dot.rs  mod.rs
cloacina-ctl/tests/e2e/: README.md  server-lifecycle.sh
cloacina-ctl/tests/integration/: archive_tests.rs  cli_tests.rs  functional_tests.rs  main.rs  manifest_tests.rs  utils_tests.rs  validation_tests.rs
cloacina-dispatcher/: README.md  pyproject.toml
cloacina-dispatcher/src/cloacina/: __init__.py
cloacina-dispatcher/src/cloacina.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cloacina-macros/: Cargo.toml
cloacina-macros/src/: lib.rs  packaged_workflow.rs  registry.rs  tasks.rs  workflow.rs
cloacina-python/: Cargo.toml  pyproject.toml  test_async_execution.py
cloacina-python/python/cloacina/: __init__.py
cloacina-python/src/: lib.rs  workflow.rs
cloacina-sqlite/: Cargo.toml  MANIFEST.in  pyproject.toml
cloacina-sqlite/python/cloacina_sqlite/: __init__.py
cloacina-sqlite/src/: lib.rs
cloacina/src/: context.rs  cron_evaluator.rs  cron_recovery.rs  cron_scheduler.rs  error.rs  graph.rs  lib.rs  logging.rs  retry.rs  scheduler.rs  task.rs  task_scheduler.rs  workflow.rs
cloacina/src/dal/: context.rs  mod.rs  pipeline_execution.rs  task_execution.rs
cloacina/src/database/: admin.rs  connection.rs  mod.rs  schema.rs  universal_types.rs
cloacina/src/executor/: mod.rs  pipeline_engine.rs  pipeline_executor.rs  task_executor.rs  thread_task_executor.rs  types.rs  unified_executor.rs
cloacina/src/models/: context.rs  cron_execution.rs  cron_schedule.rs  mod.rs  pipeline_execution.rs  recovery_event.rs  task_execution.rs  task_execution_metadata.rs  workflow_packages.rs  workflow_registry.rs
cloacina/src/packaging/: compile.rs  manifest.rs  mod.rs  types.rs  validation.rs
cloacina/src/registry/: error.rs  mod.rs  reconciler.rs  traits.rs  types.rs  workflow_registry.rs
cloacina/src/runner/: default_runner.rs
cloacina/src/task/: namespace.rs
cloacina/tests/: fixtures.rs
cloacina/tests/integration/: context.rs  main.rs  registry_storage_tests.rs  registry_workflow_registry_tests.rs  runner_configurable_registry_tests.rs
crates/cloacina/: :memory:?mode=rwc&_journal_mode=WAL&_synchronous=NORMAL  Cargo.toml  build.rs  pyproject.toml
crates/cloacina-agent/: Cargo.toml
crates/cloacina-agent/src/: main.rs
crates/cloacina-api-types/: Cargo.toml
crates/cloacina-api-types/src/: common.rs  compiler.rs  delivery.rs  error.rs  executions.rs  fleet.rs  health.rs  input_interface.rs  keys.rs  lib.rs  operations.rs  reactor.rs  secrets.rs  tenants.rs  triggers.rs  workflows.rs
crates/cloacina-build/: Cargo.toml
crates/cloacina-build/src/: lib.rs
crates/cloacina-cli/: Cargo.toml
crates/cloacina-cli/src/: main.rs
crates/cloacina-client/: Cargo.toml
crates/cloacina-client/src/: error.rs  lib.rs  profile.rs  ws.rs
crates/cloacina-client/tests/: contract.rs
crates/cloacina-compiler/: Cargo.toml
crates/cloacina-compiler/src/: build.rs  config.rs  doc_parse.rs  health.rs  lib.rs  loopp.rs  main.rs  param_parse.rs  sandbox.rs
crates/cloacina-computation-graph/: Cargo.toml
crates/cloacina-computation-graph/src/: lib.rs
crates/cloacina-constructor-contract/: Cargo.toml
crates/cloacina-constructor-contract/src/: lib.rs
crates/cloacina-operator-contract/: Cargo.toml
crates/cloacina-operator-contract/src/: lib.rs
crates/cloacina-python/: Cargo.toml  build.rs  pyproject.toml
crates/cloacina-python/src/: computation_graph.rs  computation_graph_tests.rs  constructor.rs  context.rs  executor.rs  gil.rs  lib.rs  loader.rs  namespace.rs  package_loader.rs  reactor.rs  runtime_impl.rs  runtime_scope.rs  task.rs  trigger.rs  trigger_rules.rs  workflow.rs  workflow_context.rs
crates/cloacina-python/tests/: constructor_consumption.rs  cross_language_fan_out.rs  python_package.rs  python_reactor_library.rs  trigger_packaging.rs
crates/cloacina-server/: Cargo.toml  build.rs
crates/cloacina-server/src/: agent_registry.rs  delivery_sink.rs  fleet_coordinator.rs  fleet_executor.rs  fleet_graph_executor.rs  identity.rs  lib.rs  main.rs  (+5 more)
crates/cloacina-testing/: Cargo.toml  build.rs
crates/cloacina-workflow-plugin/: Cargo.toml
crates/cloacinactl/: Cargo.toml  build.rs
examples/complex-dag-example/: Cargo.toml
examples/packaged-workflow-example/: Cargo.toml  README.md
(+4499 files in other folders)
