[workspace]
members = ["crates/cloacina", "crates/cloacina-build", "crates/cloacinactl", "crates/cloacina-macros", "crates/cloacina-workflow-plugin", "crates/cloacina-testing", "crates/cloacina-workflow", "crates/cloacina-computation-graph"]
exclude = ["examples/*"]
resolver = "2"

[workspace.package]
version = "0.4.0"
authors = ["Dylan Storey <dylan.storey@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/colliery-io/cloacina"
homepage = "https://github.com/colliery-io/cloacina"
documentation = "https://colliery-io.github.io/cloacina/"
readme = "README.md"
keywords = []
categories = []

[workspace.dependencies]
async-trait = { version = "0.1" }
ctor = { version = "0.2" }
once_cell = { version = "1.19.0" }
serde_json = { version = "1.0" }
cloacina-macros = { version = "0.4.0", path = "crates/cloacina-macros" }
cloacina-workflow = { version = "0.4.0", path = "crates/cloacina-workflow" }
clap = { version = "4.0", features = ["derive", "env"] }
anyhow = { version = "1.0" }
toml = { version = "0.8" }
bincode = { version = "1.3" }
