[workspace]
members = ["crates/cloacina", "crates/cloacina-api-types", "crates/cloacina-client", "crates/cloacina-build", "crates/cloacinactl", "crates/cloacina-server", "crates/cloacina-agent", "crates/cloacina-compiler", "crates/cloacina-macros", "crates/cloacina-workflow-plugin", "crates/cloacina-testing", "crates/cloacina-workflow", "crates/cloacina-computation-graph", "crates/cloacina-constructor-contract", "crates/cloacina-python"]
exclude = ["examples/*"]
resolver = "2"

[workspace.package]
version = "0.9.0"
authors = ["Dylan Storey <dylan.storey@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/colliery-io/cloacina"
homepage = "https://github.com/colliery-io/cloacina"
documentation = "https://colliery-io.github.io/cloacina/"
readme = "README.md"
keywords = []
categories = []

[workspace.dependencies]
async-trait = { version = "0.1" }
inventory = { version = "0.3" }
once_cell = { version = "1.19.0" }
serde_json = { version = "1.0" }
cloacina = { version = "0.9.0", path = "crates/cloacina" }
cloacina-api-types = { version = "0.9.0", path = "crates/cloacina-api-types" }
cloacina-build = { version = "0.9.0", path = "crates/cloacina-build" }
cloacina-client = { version = "0.9.0", path = "crates/cloacina-client" }
cloacina-computation-graph = { version = "0.9.0", path = "crates/cloacina-computation-graph" }
cloacina-macros = { version = "0.9.0", path = "crates/cloacina-macros" }
cloacina-python = { version = "0.9.0", path = "crates/cloacina-python" }
cloacina-workflow = { version = "0.9.0", path = "crates/cloacina-workflow" }
cloacina-workflow-plugin = { version = "0.9.0", path = "crates/cloacina-workflow-plugin" }
cloacina-constructor-contract = { version = "0.9.0", path = "crates/cloacina-constructor-contract" }
clap = { version = "4.0", features = ["derive", "env"] }
anyhow = { version = "1.0" }
toml = { version = "0.8" }
bincode = { version = "1.3" }
