[package]
name = "cloacina-ctl"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
edition = "2021"
description = "Command-line interface for Cloacina workflow compilation and management"

[features]
default = ["postgres"]
postgres = ["cloacina/postgres", "cloacina/macros"]
sqlite = ["cloacina/sqlite", "cloacina/macros"]

[[bin]]
name = "cloacina-ctl"
path = "src/main.rs"

[dependencies]
cloacina = { path = "../cloacina", default-features = false }
clap = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
semver = "1.0"
regex = "1.10"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.0"
libloading = "0.8"

[dev-dependencies]
tempfile = "3.0"
