[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloacina"
version = "0.1.0"
description = "Python bindings for Cloacina workflow orchestration"
authors = [
    {name = "Cloacina Team", email = "team@cloacina.dev"}
]
license = {text = "MIT OR Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["workflow", "orchestration", "task", "pipeline", "etl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/colliery-io/cloacina"
Repository = "https://github.com/colliery-io/cloacina"
Documentation = "https://colliery-io.github.io/cloacina/"

[project.optional-dependencies]
postgres = ["cloacina-postgres==0.1.0"]
sqlite = ["cloacina-sqlite==0.1.0"]

[tool.setuptools]
packages = ["cloacina"]
package-dir = {"" = "src"}