[package]
name = "cloacina-macros"
version.workspace = true
edition = "2021"

[lib]
proc-macro = true

[dependencies]
async-trait.workspace = true
ctor.workspace = true
once_cell.workspace = true
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
serde_json.workspace = true
syn = { version = "2.0", features = ["full"] }
