[package]
name = "cloacina-python"
version = "0.1.0"
edition = "2021"
authors = ["Cloacina Team"]
license = "MIT OR Apache-2.0"
description = "Python bindings for Cloacina workflow orchestration"
repository = "https://github.com/collierconsulting/cloacina"
keywords = ["workflow", "orchestration", "python", "task", "pipeline"]
categories = ["api-bindings", "asynchronous"]

[lib]
name = "_cloacina"
crate-type = ["cdylib"]

[dependencies]
cloacina = { path = "../cloacina" }
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py39"] }
pyo3-asyncio-0-21 = { version = "0.21", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
futures = "0.3"
tracing = "0.1"
parking_lot = "0.12"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19.0"
uuid = { version = "1.0", features = ["serde", "v4"] }

[dev-dependencies]
