[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cloacina"
version = "0.1.0"
description = "Python bindings for Cloacina workflow orchestration"
authors = [
    {name = "Cloacina Team", email = "team@cloacina.dev"}
]
license = {text = "MIT OR Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["workflow", "orchestration", "task", "pipeline", "etl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/colliery-io/cloacina"
Repository = "https://github.com/colliery-io/cloacina"
Documentation = "https://colliery-io.github.io/cloacina/"

[tool.maturin]
python-source = "python"
module-name = "cloacina._cloacina"
