[package]
name = "cloacina"
version.workspace = true
edition = "2021"
description = "A Rust library for managing database migrations and schema evolution"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["macros"]
macros = ["cloacina-macros"]

[dependencies]
# Workspace dependencies
async-trait.workspace = true
ctor.workspace = true
once_cell.workspace = true
serde_json.workspace = true

# Local dependencies
cloacina-macros = { path = "../cloacina-macros", optional = true }

# External dependencies
aquamarine = { version = "0.6.0" }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
diesel_migrations = { version = "2.1.0" }
dotenvy = { version = "0.15" }
petgraph = { version = "0.6" }
rand = { version = "0.8" }
r2d2 = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serial_test = { version = "3.2.0" }
tempfile = { version = "3.2" }
thiserror = { version = "1.0" }
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = { version = "0.2" }
url = { version = "2.5" }
uuid = { version = "1.0", features = ["serde", "v4"] }

[dev-dependencies]
tracing-test = "0.2"
tempfile = "3.2"
once_cell = "1.19.0"
serial_test = "3.2.0"
aquamarine = "0.6.0"
