[workspace]

[package]
name = "cloaca"
version = "0.3.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Python bindings for Cloacina workflow orchestration engine"

[lib]
name = "cloaca"
crate-type = ["cdylib"]

[features]
# extension-module is only needed for cdylib builds (Python wheel).
# maturin enables this automatically. Omit for cargo test.
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
pyo3 = { version = "0.25", features = ["abi3-py39"] }
cloacina = { path = "../../crates/cloacina" }
serde_json = "1.0"
pythonize = "0.25"
async-trait = "0.1"
chrono = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
url = "2.5"

[dev-dependencies]
pyo3 = { version = "0.25", features = ["auto-initialize"] }

[build-dependencies]
pyo3-build-config = "0.25"
