[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloacina-client"
version = "0.9.0"
description = "Python SDK for cloacina-server — typed REST client and WebSocket execution-event streams. Version-locked to the cloacina server release. (Service client; the embedded runtime is the separate `cloaca` package.)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Dylan Storey", email = "dylan.storey@gmail.com" }]
dependencies = [
    "httpx>=0.27,<1",
    "attrs>=22.2.0",
    "python-dateutil>=2.8.0",
    "websockets>=13,<16",
]

[project.urls]
Repository = "https://github.com/colliery-io/cloacina"
Documentation = "https://colliery-io.github.io/cloacina/"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.hatch.build.targets.wheel]
packages = ["src/cloacina_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

# Regenerating the vendored client (pinned generator — CI diffs this):
#   uvx openapi-python-client@0.29.0 generate \
#     --path ../../docs/static/openapi.json \
#     --config generator-config.yaml --meta none \
#     --output-path src/cloacina_client/_generated --overwrite
