[package]
name = "cloacina-cli"
version.workspace = true
edition = "2021"
description = "Command-line interface for Cloacina task orchestration engine."
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[[bin]]
name = "cloacina"
path = "src/main.rs"

[features]
default = ["postgres", "sqlite"]
postgres = ["cloacina/postgres"]
sqlite = ["cloacina/sqlite"]

[dependencies]
cloacina = { path = "../cloacina", default-features = false }
clap.workspace = true
anyhow.workspace = true
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
