[package]
name = "cloacina-computation-graph"
version = "0.5.1"
edition = "2021"
description = "Core types for Cloacina computation graph plugins"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "2.0"
parking_lot = "0.12"
once_cell = "1.21"
tracing = "0.1"
