[package]
name = "cloacina-server"
version.workspace = true
edition = "2021"
description = "HTTP API server for Cloacina task orchestration engine."
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[lib]
name = "cloacina_server"
path = "src/lib.rs"

[[bin]]
name = "cloacina-server"
path = "src/main.rs"

[features]
default = ["postgres"]
postgres = ["cloacina/postgres"]
sqlite = ["cloacina/sqlite"]
kafka = ["cloacina/kafka"]
telemetry = ["dep:tracing-opentelemetry", "dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk"]

[dependencies]
cloacina = { path = "../cloacina", default-features = false }
cloacina-workflow-plugin = { version = "0.5.1", path = "../cloacina-workflow-plugin" }
clap.workspace = true
anyhow.workspace = true
dirs = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
axum = { version = "0.8", features = ["multipart", "ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
hyper = { version = "1.0" }
lru = "0.12"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
base64 = "0.22"
bincode = "1.3"
http-body-util = "0.1"
tracing-opentelemetry = { version = "0.32", optional = true }
opentelemetry = { version = "0.31", optional = true }
opentelemetry-otlp = { version = "0.31", optional = true, features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", optional = true, features = ["rt-tokio"] }

[dev-dependencies]
serial_test = "3"
