[package]
name = "cloacina-server"
version.workspace = true
edition = "2021"
description = "HTTP API server for Cloacina task orchestration engine."
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[lib]
name = "cloacina_server"
path = "src/lib.rs"

[[bin]]
name = "cloacina-server"
path = "src/main.rs"

[features]
default = ["postgres"]
postgres = ["cloacina/postgres", "diesel/postgres"]
sqlite = ["cloacina/sqlite"]
kafka = ["cloacina/kafka"]
telemetry = ["dep:tracing-opentelemetry", "dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk"]

[dependencies]
cloacina = { version = "0.9.0", path = "../cloacina", default-features = false }
# CLOACI-T-0811: the fleet control loop runs raw SQL (Postgres advisory locks for
# leader election) over a pooled connection — the same `conn.interact` +
# `diesel::sql_query` idiom the DAL uses. The Postgres backend is enabled via the
# `postgres` feature so it tracks `cloacina/postgres`.
diesel = { version = "2.1.0" }
cloacina-api-types = { workspace = true, features = ["openapi"] }
utoipa = { version = "5" }
# Python runtime — server registers the impl at startup so uploaded
# Python-language packages can be loaded by the reconciler. Compiler
# service intentionally does not depend on this (T-0529).
cloacina-python = { version = "0.9.0", path = "../cloacina-python", default-features = false }
cloacina-workflow-plugin = { version = "0.9.0", path = "../cloacina-workflow-plugin" }
clap.workspace = true
anyhow.workspace = true
dirs = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
axum = { version = "0.8", features = ["multipart", "ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
hyper = { version = "1.0" }
lru = "0.12"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
base64 = "0.22"
# CLOACI-T-0789/0790: OIDC relying party. openidconnect handles discovery,
# JWKS, PKCE, and spec-correct ID-token validation (OQ-6).
openidconnect = { version = "4", features = ["reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
bincode = "1.3"
http-body-util = "0.1"
# CLOACI-T-0810: Docker dev fleet actuator. Talks the Docker Engine API to
# spawn/stop tenant-labelled `cloacina-agent` containers. Connection is lazy —
# constructing the client does not require a reachable daemon (the substrate
# guard probes the socket explicitly before the actuator is built).
bollard = "0.21"
tracing-opentelemetry = { version = "0.32", optional = true }
opentelemetry = { version = "0.31", optional = true }
opentelemetry-otlp = { version = "0.31", optional = true, features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", optional = true, features = ["rt-tokio"] }

[dev-dependencies]
serial_test = "3"
# T-0570 contract test signs a temp-file payload before driving the upload
# handler. Used in tests only.
tempfile = "3"

[build-dependencies]
cloacina-build = { version = "0.9.0", path = "../cloacina-build" }
